--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "stripe": "^15.9.0"
   }
 }
