--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ant-design": "^1.0.0",
     "antd": "^5.17.3",
+    "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.6.2",
     "react": "^18.3.1",
