--- a/website/backend/vercel.json
+++ b/website/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js", 
+            "src": "*.js",
             "use": "@vercel/node"
         }
     ],
@@ -12,10 +12,10 @@
             "dest": "server.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
-                "Access-Control-Allow-Origin": "*"
+                "Access-Control-Allow-Origin": "https://savemytime-production-client.vercel.app",
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+                "Access-Control-Allow-Headers": "Content-Type, Authorization"
             }
         }
     ]
 }
-
-    
