--- a/website/backend/vercel.json
+++ b/website/backend/vercel.json
@@ -12,7 +12,7 @@
             "dest": "server.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
-                "Access-Control-Allow-Origin": "https://savemytime-production-client.vercel.app, https://extension-savemytime-production.vercel.app/",
+                "Access-Control-Allow-Origin": "*", 
                 "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
                 "Access-Control-Allow-Headers": "Content-Type, Authorization"
             }
