--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "stripe": "^15.9.0"
